Main page: Fix list alignment

--- a/static/style.css
+++ b/static/style.css
@@ -143,7 +143,7 @@ img:hover:not(.nohover) {
     filter: invert(1);
 }
 
-.text_intro ul {
+.intro_text ul {
     list-style: inside;
 }
 
